@@ -1,3 +1,8 @@
+2007-01-31  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_datum_set.cpp: Don't parse more datum shift parameters than
+	we have space to store in datum_params[]. 
+
 2006-11-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/rtodms.c: Fix computation of degree per bug described on the
